<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello World - Home Screen</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_planet_caption">Click Planet to Add</string>
    <string name="planet_name_label">Planet Name: </string>
    <string name="planet_mass_label">Planet Mass: </string>
    <string name="planet_gravity_label">Planet Gravity: </string>
    <string name="planet_colonies_label">Planet Colonies: </string>
    <string name="planet_population_label">Planet Population: </string>
    <string name="planet_military_label">Planet Military: </string>
    <string name="planet_bases_label">Planet Bases: </string>
    <string name="planet_forcefield_label">Planet Forcefield: </string>
    <string name="menu_add_planet">Add a New Planet</string>
    <string name="menu_config_planet">Configure Planet</string>
    <string name="menu_travel_planet">Travel to Planet</string>
    <string name="menu_attack_planet">Attack on Planet</string>
    <string name="menu_home_planet">Show Home Planet</string>
    <string name="content_desc_earth">Planet Earth</string>
    <string name="content_desc_mars">Planet Mars</string>
    <string name="content_desc_venus">Planet Venus</string>
    <string name="content_desc_jupiter">Planet Jupiter</string>
    <string name="content_desc_saturn">Planet Saturn</string>
    <string name="content_desc_neptune">Planet Neptune</string>
    <string name="button_name_colonies">Add Colonies</string>
    <string name="button_name_colonist">Add Colonist</string>
    <string name="button_name_bases">Add Bases</string>
    <string name="button_name_military">Add Military</string>
    <string name="button_name_ffon">Forcefield On</string>
    <string name="button_name_ffoff">Forcefield Off</string>
    <string name="button_name_done">Done Configuring</string>
    <string name="button_name_return">Return Home</string>
    <string name="content_desc_bomb">Bomb the Planet</string>
    <string name="content_desc_invade">Invade the Planet</string>
    <string name="content_desc_virus">Infect Planet with Virus</string>
    <string name="content_desc_laser">Fire Laser at Planet</string>
    <string name="content_desc_exit">Exit to home planet</string>
    <string name="title_activity_new_planet">Hello World - Create a Planet</string>
    <string name="title_activity_travel_planet">Hello World - Travel to Planet</string>
    <string name="title_activity_attack_planet">Hello World - Attack a Planet</string>
    <string name="title_activity_config">Hello World - Configure Planet</string>
    <string name="button_name_done_add">All Done!</string>
    <string name="attack_planet_caption">Select Attack Type Using Icon</string>
    <string name="attack_planet_bomb">Bomb a Planet</string>
    <string name="attack_planet_invade">Invade a Planet</string>
    <string name="attack_planet_infect">Infect a Planet</string>
    <string name="attack_planet_laser">Shoot a Laser</string>
    <string name="attack_planet_exit">Exit Attack Mode</string>
    <string name="travel_button_caption">Return to Home</string>
    <string name="title_activity_time_planet">Hello World - Home Planet Earth Time</string>
    <string name="time_button_value">Return to Planet Configuration</string>
    <string name="time_caption_value">Time</string>
    <string name="button_name_time">Atomic Clock</string>
    <string name="start_button_value">Start Music Service</string>
    <string name="stop_button_value">Stop Music Service</string>
    <string name="timer_hint_value">Enter Number of Seconds</string>
    <string name="timer_button_value">Start Timer Countdown</string>
    <string name="title_activity_alien_contact">Hello World - Alien contacts</string>
    <string name="find_alien_button_value">List Aliens in this Galaxy</string>
    <string name="add_spock_button_value">Add Spock to my Alliance</string>
    <string name="add_worf_button_value">Add Worf to my Alliance</string>
    <string name="menu_contact_planet">Make Alien Contact</string>
</resources>
