<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_name_colonies"
            android:id="@+id/coloniesButton"
            android:layout_gravity="left|center_vertical"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_name_colonist"
            android:id="@+id/colonistButton"
            android:layout_gravity="left|center_vertical"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_name_bases"
            android:id="@+id/basesButton"
            android:layout_gravity="left|center_vertical"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_name_military"
            android:id="@+id/militaryButton"
            android:layout_gravity="left|center_vertical"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_name_ffon"
            android:id="@+id/ffonButton"
            android:layout_gravity="left|center_vertical"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_name_ffoff"
            android:id="@+id/ffoffButton"
            android:layout_gravity="left|center_vertical"/>
</LinearLayout>