<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NewPlanetActivity">

    <ImageView
            android:id="@+id/imageEarth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/content_desc_earth"/>
    <ImageView
            android:id="@+id/imageMars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/imageEarth"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/content_desc_mars"/>
    <ImageView
            android:id="@+id/imageVenus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@+id/imageEarth"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/content_desc_venus"/>
    <ImageView
            android:id="@+id/imageJupiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/imageVenus"
            android:layout_below="@+id/imageMars"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/content_desc_jupiter"/>
    <ImageView
            android:id="@+id/imageSaturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@+id/imageVenus"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/content_desc_saturn"/>
    <ImageView
            android:id="@+id/imageNeptune"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/imageSaturn"
            android:layout_below="@+id/imageJupiter"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/content_desc_neptune"/>

</RelativeLayout>
