<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timePlanetScreen"
    android:background="@drawable/trans_stars_galaxy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".TimePlanetActivity">

    <AnalogClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/analogClock"
        android:background="@drawable/earth"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/setAlarm"
        android:hint="@string/timer_hint_value"
        android:inputType="numberDecimal"
        android:ems="12"
        android:alpha="0.75"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:typeface="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/startCounter"
        android:textColor="#FFCCAA"
        android:text="@string/timer_button_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:text="@string/time_caption_value"
        android:textColor="#FFCCAA"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/timeButton"
        android:textColor="#FFCCAA"
        android:text="@string/time_button_value"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/startServiceButton"
        android:textColor="#FFAAAA"
        android:text="@string/start_button_value"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/stopServiceButton"
        android:textColor="#FFAAAA"
        android:text="@string/stop_button_value"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
